--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -7,8 +7,7 @@
     android:scrollbars="none"
     android:fitsSystemWindows="true"
     android:layout_height="match_parent"
-    android:background="@color/limeWhite"
-    tools:context=".UI.MainActivity">
+    android:background="@color/limeWhite">
     <RelativeLayout
         android:id="@+id/mainLayout"
         android:layout_width="match_parent"
@@ -42,6 +41,7 @@
             android:layout_height="wrap_content">
             <!--    vector image edit here-->
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -64,7 +64,6 @@
             android:padding="10dp">
 
             <LinearLayout
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -78,21 +77,50 @@
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/mobileText"
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/enter_your_mobile_number_to_login_or_signup"
+                    android:textStyle="normal" />
+                <LinearLayout
                     android:layout_margin="20dp"
                     android:background="@drawable/radius_background"
-                    android:drawableStart="@drawable/ic_wflag"
-                    android:drawablePadding="10dp"
-                    android:gravity="center|start"
-                    android:hint="@string/login_mobile_hint"
-                    android:inputType="numberDecimal"
-                    android:maxLength="10"
-                    android:padding="10dp"
-                    android:textSize="17sp" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:drawablePadding="10dp"
+                        android:gravity="center|start"
+                        android:text="+91"
+                        android:textColor="@color/black"
 
+                        android:maxLength="10"
+                        android:padding="10dp"
+                        android:textSize="17sp"
+                        app:drawableStartCompat="@drawable/ic_wflag" />
+                    <View
+                        android:layout_width="0.5dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/greyish"/>
+
+                    <EditText
+                        android:background="@drawable/input_shape"
+                        android:id="@+id/mobileText"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="10dp"
+                        android:drawablePadding="10dp"
+                        android:gravity="center|start"
+                        android:hint="@string/login_mobile_hint"
+                        android:inputType="numberDecimal"
+                        android:maxLength="10"
+                        android:padding="10dp"
+                        android:textSize="17sp" />
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
