--- a/app/src/main/res/layout/fragment_verify.xml
+++ b/app/src/main/res/layout/fragment_verify.xml
@@ -2,18 +2,19 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/ScrollOtp"
-    android:overScrollMode="never"
-    android:scrollbars="none"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/limeWhite"
-    tools:context=".UI.Send_Otp_Activity">
+    android:orientation="vertical"
+    android:overScrollMode="never"
+    android:scrollbars="none">
+
     <RelativeLayout
         android:id="@+id/mainLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <RelativeLayout
             android:id="@+id/headingLayout"
             android:layout_width="match_parent"
@@ -21,40 +22,46 @@
             android:layout_alignParentTop="true">
             <!--    heading edit here -->
             <LinearLayout
-                android:gravity="end"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="start">
+
                 <TextView
                     android:id="@+id/ForceExit"
-                    android:textAllCaps="true"
-                    android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/force_exit"
+                    android:layout_gravity="start|center"
+                    android:drawablePadding="10dp"
+                    android:gravity="center"
+                    android:padding="20dp"
+                    android:text="Verify"
+                    android:textAllCaps="true"
                     android:textColor="#000000"
-                    android:layout_gravity="end"
-                    android:gravity="right"
-                    android:padding="20dp"/>
+                    android:textStyle="bold"
+                    app:drawableStartCompat="@drawable/ic_op_left" />
             </LinearLayout>
         </RelativeLayout>
+
         <RelativeLayout
             android:id="@+id/vectorImage"
-            android:layout_below="@id/headingLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/headingLayout">
             <!--    vector image edit here-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center">
+                android:gravity="center"
+                android:visibility="gone">
+
                 <ImageView
-                    android:padding="30dp"
-                    android:layout_margin="30dp"
-                    android:layout_weight="1"
                     android:layout_width="300dp"
                     android:layout_height="300dp"
                     android:layout_gravity="center"
+                    android:layout_margin="30dp"
+                    android:layout_weight="1"
+                    android:padding="30dp"
                     android:src="@drawable/ic_two_factor_authentication_rafiki2" />
             </LinearLayout>
         </RelativeLayout>
@@ -77,16 +84,28 @@
                     android:layout_marginStart="20dp"
                     android:text="@string/a_single_step_to_go"
                     android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/sentMobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:text="399846909"
+                    android:textColor="@color/black"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
                 <com.chaos.view.PinView
-                    android:layout_marginBottom="0dp"
                     android:id="@+id/firstPinView"
                     style="@style/PinWidget.PinView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="0dp"
                     android:cursorVisible="true"
                     android:hint="0000"
                     android:inputType="number"
@@ -101,13 +120,14 @@
                     app:itemCount="4"
                     app:itemHeight="60dp"
                     app:itemRadius="5dp"
-                    app:itemSpacing="11dp"
-                    app:itemWidth="75dp"
+                    app:itemSpacing="5dp"
+                    app:itemWidth="60dp"
                     app:lineColor="@color/greyish"
                     app:lineWidth="12dp"
                     app:viewType="none" />
 
                 <LinearLayout
+                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -119,14 +139,15 @@
                         android:layout_width="0dp"
                         android:layout_height="25dp"
                         android:layout_gravity="center"
-                        android:layout_marginTop="-2dp"
                         android:layout_marginStart="20dp"
+                        android:layout_marginTop="-2dp"
                         android:layout_weight="1"
-                        android:tooltipText="RESEND OTP IN #) SEC"
                         android:gravity="center|start"
                         android:textColor="#000000"
                         android:textSize="12sp"
-                        android:textStyle="normal" />
+                        android:textStyle="normal"
+                        android:text="RESEND OTP IN 10 SEC"
+                        android:tooltipText="RESEND OTP IN #) SEC" />
 
                     <TextView
                         android:id="@+id/resendOtpButton"
@@ -145,16 +166,17 @@
                 </LinearLayout>
 
                 <Button
+                    android:layout_marginTop="20dp"
                     android:id="@+id/submit_otp_button"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_gravity="center"
+                    android:layout_gravity="start"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
-                    android:textColor="@color/white"
                     android:background="@drawable/button_shape_primary"
                     android:gravity="center"
-                    android:text="@string/continue_here" />
+                    android:text="@string/continue_here"
+                    android:textColor="@color/white" />
 
             </LinearLayout>
         </RelativeLayout>
