--- a/app/src/main/res/layout/snackbar_2.xml
+++ b/app/src/main/res/layout/snackbar_2.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="match_parent"
-     android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_margin="20dp"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
@@ -11,7 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp">
         <TextView
-            android:gravity="center"
+            android:id="@+id/message_snake"
+            android:layout_marginStart="20dp"
+            android:gravity="start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
