--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondary">#3F51B5</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+        <!-- Status Bar color. -->
 <!--        <item name="android:navigationBarColor">#00F4F7FF</item>-->
         <item name="android:statusBarColor" tools:targetApi="l">@color/limeWhite</item>
         <!-- Customize your theme here. -->
