--- a/app/src/main/res/layout/notice_itemlist.xml
+++ b/app/src/main/res/layout/notice_itemlist.xml
@@ -89,7 +89,7 @@
                 android:fontFamily="@font/poppins_semibold"
                 android:text="Gopal Meena" />
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_weight="1"
