--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,7 @@
     <color name="custom_keyboard_col">#8D8D8E</color>
     <color name="active_green">#08a982</color>
     <color name="splash_color">#4153B6</color>
+<!--    <color name="colorMain">#265c7e</color>-->
+    <color name="colorMain">#FF3700B3</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
