--- a/app/src/main/res/layout/fragment_add_card.xml
+++ b/app/src/main/res/layout/fragment_add_card.xml
@@ -159,10 +159,10 @@
                             <com.google.android.material.textfield.TextInputLayout
                                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                                 android:layout_width="match_parent"
-                                android:layout_weight="1"
                                 android:layout_height="match_parent"
                                 android:layout_gravity="center"
                                 android:layout_marginTop="0dp"
+                                android:layout_weight="1"
                                 android:gravity="start"
                                 android:hint="MM"
                                 android:padding="0dp"
@@ -172,6 +172,7 @@
                                 app:hintTextColor="@color/black">
 
                                 <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/cardExpiryMonth"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_gravity="center"
@@ -185,12 +186,12 @@
                             <com.google.android.material.textfield.TextInputLayout
                                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                                 android:layout_width="match_parent"
-                                android:layout_weight="1"
                                 android:layout_height="match_parent"
                                 android:layout_gravity="center"
-                                android:layout_marginTop="0dp"
                                 android:layout_marginStart="@dimen/dimen_5dp"
+                                android:layout_marginTop="0dp"
                                 android:layout_marginEnd="@dimen/dimen_5dp"
+                                android:layout_weight="1"
                                 android:gravity="start"
                                 android:hint="YY"
                                 android:padding="0dp"
@@ -200,6 +201,7 @@
                                 app:hintTextColor="@color/black">
 
                                 <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/cardExpiryYear"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_gravity="center"
@@ -213,10 +215,10 @@
                             <com.google.android.material.textfield.TextInputLayout
                                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                                 android:layout_width="match_parent"
-                                android:layout_weight="1"
                                 android:layout_height="match_parent"
                                 android:layout_gravity="center"
                                 android:layout_marginTop="0dp"
+                                android:layout_weight="1"
                                 android:gravity="start"
                                 android:hint="CVV"
                                 android:padding="0dp"
@@ -226,6 +228,7 @@
                                 app:hintTextColor="@color/black">
 
                                 <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/cardCvv"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_gravity="center"
@@ -235,7 +238,6 @@
                                     android:maxLength="3" />
 
                             </com.google.android.material.textfield.TextInputLayout>
-
 
 
                         </LinearLayout>
