--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -123,12 +123,12 @@
             android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:enabled="false"
                 android:id="@+id/nameProfile"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:enabled="false"
                 android:gravity="start"
                 android:hint="Name"
                 android:padding="0dp"
@@ -166,6 +166,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:enabled="false"
                 android:hint="Account Number"
                 app:boxStrokeColor="@color/black"
                 app:boxStrokeWidth="0.5dp"
@@ -199,6 +200,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:enabled="false"
                 android:hint="IFSC Code"
                 app:boxStrokeColor="@color/black"
                 app:boxStrokeWidth="0.5dp"
@@ -230,7 +232,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/button_shape_primary"
-                android:text="Submit"
+                android:text="Edit"
                 android:textColor="@color/white" />
 
             <include
